v1.0.46 棘轮修正，楼层高度数值下降不能超过（3m调整为1m）